[tool.poetry]
name = "pytorchcnnshstmergers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
astropy = "^5.2.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
